<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.EditProfileActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:background="@drawable/rounded_header_flat"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:text="@string/edit_profile"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"/>
    <EditText
        android:layout_gravity="center"
        android:id="@+id/loginET"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:padding="8dp"
        android:hint="@string/login"
        android:background="@drawable/rounded_et"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:layout_gravity="center"
        android:id="@+id/paswordET"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:padding="8dp"

        android:hint="@string/password"
        android:background="@drawable/rounded_et"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:layout_gravity="center"
        android:id="@+id/emailET"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:padding="8dp"
        android:hint="@string/email"
        android:background="@drawable/rounded_et"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:layout_gravity="center"
        android:id="@+id/firstNameET"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:padding="8dp"
        android:hint="@string/firstname"
        android:background="@drawable/rounded_et"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:layout_gravity="center"
        android:id="@+id/lastNameET"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:padding="8dp"
        android:hint="@string/lastname"
        android:background="@drawable/rounded_et"
        android:layout_marginTop="20dp"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/edit_profile"
        android:background="@drawable/rounded_button"
        android:onClick="editClick"
        android:layout_gravity="center"/>

</LinearLayout>