<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activities.RegisterActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingHorizontal="40dp"
            android:paddingVertical="60dp"
            android:background="@drawable/rounded_layout"
            >

            <EditText
                android:id="@+id/loginET"
                android:drawableRight="@drawable/ic_profile"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:tooltipText="@string/login"
                android:padding="8dp"
                android:background="@drawable/rounded_et"
                android:hint="@string/login"
                />
            <EditText
                android:id="@+id/emailET"
                android:drawableRight="@drawable/ic_email"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:tooltipText="@string/email"
                android:padding="8dp"
                android:background="@drawable/rounded_et"
                android:hint="@string/email"
                android:layout_marginTop="20dp"

                />
            <EditText
                android:id="@+id/paswordET"
                android:drawableRight="@drawable/ic_password"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:padding="8dp"
                android:tooltipText="@string/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/rounded_et"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:id="@+id/confirmPasswordET"
                android:drawableRight="@drawable/ic_password"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:padding="8dp"
                android:tooltipText="@string/confirmPassword"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:background="@drawable/rounded_et"
                android:layout_marginTop="20dp"
                />

            <Button
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:text="@string/register"
                android:background="@drawable/rounded_button"
                android:onClick="registerClick"/>


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>