<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Activities.PaymentActivity"
    tools:showIn="@layout/activity_payment">

  <TextView
      android:layout_width="match_parent"
      android:textAlignment="center"
      android:layout_height="wrap_content"
      android:text="@string/payment_details"
      android:textSize="35sp"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center"
      android:layout_marginTop="600px">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_cost"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reservation_cost"
        android:text="30"
        android:layout_marginLeft="5sp"
        android:textSize="20sp"/>

  </LinearLayout>

  <Button
      android:text="@string/pay"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/payButton"
      android:layout_marginTop="20dp"
      android:backgroundTint="@android:color/holo_green_light"/>
</LinearLayout>
