<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/rounded_cv"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:background="@drawable/rounded_header"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:text="@string/bookIt"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            >
            <EditText
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_calendar"
                android:hint="@string/dateFrom"
                android:id="@+id/calendarFrom"
                android:focusable="false"
                />
            <EditText
                android:layout_marginLeft="5dp"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_calendar"
                android:hint="@string/dateTo"
                android:id="@+id/calendarTo"
                android:focusable="false"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guests_count"
                android:textSize="20sp"
                />
            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:id="@+id/numberPicker"
                />
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            app:backgroundTint="@null"
            android:background="@drawable/rounded_button"
            android:text="@string/bookIt"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/addBikeBtn"
            />
    </LinearLayout>

</LinearLayout>