<?xml version="1.0" encoding="utf-8"?>
  <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activities.LoginActivity">

  <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      >

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:gravity="center"
          android:paddingHorizontal="40dp"
          android:paddingVertical="60dp"
          android:background="@drawable/rounded_layout"
          >


          <EditText
              android:id="@+id/loginET"
              android:drawableRight="@drawable/ic_profile"
              android:layout_width="250dp"
              android:layout_height="40dp"
              android:tooltipText="@string/login"
              android:padding="8dp"
              android:background="@drawable/rounded_et"
              android:hint="@string/login"
              />
          <EditText
              android:id="@+id/paswordET"
              android:drawableRight="@drawable/ic_password"
              android:layout_width="250dp"
              android:layout_height="40dp"
              android:padding="8dp"
              android:tooltipText="@string/login"
              android:hint="@string/password"
              android:inputType="textPassword"
              android:background="@drawable/rounded_et"
              android:layout_marginTop="20dp"
              />
          <TextView
              android:id="@+id/createAcc"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="16sp"
              android:layout_marginTop="10dp"
              android:gravity="start"
              android:layout_gravity="start"
              android:text="@string/register"
              android:clickable="true"
              android:onClick="registerClick"
              android:focusable="true"
              android:textStyle="bold"
              android:background="@color/loginBackground"
              />

          <Button
              android:layout_width="150dp"
              android:layout_height="50dp"
              android:layout_marginTop="30dp"
              android:text="@string/login"
              android:background="@drawable/rounded_button"
              android:onClick="loginClick"/>


      </LinearLayout>
  </RelativeLayout>

  </RelativeLayout>